# COMP1100-Assignment-2

./: .gitignore  README.md  comp1100-assignment2.cabal
app/: Main.hs
src/: App.hs  Automata.hs  AutomataTest.hs  GridRenderer.hs  TestPatterns.hs  Testing.hs
test/: Main.hs
